Allow null values in of function